--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../../Background_image.jpg");
+    background-image: url("../Public/images/Background_image.jpg");
     background-size: cover;
 }
 .shade{
